update composer files

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
             "email": "dlgv24@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {},
+    "bin": [
+        "bin/brain-games"
+    ]
 }
