--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,14 @@
             "email": "dlgv24@yandex.ru"
         }
     ],
-    "require": {},
+    "autoload": {
+        "psr-4": {
+            "BrainGames\\Cli\\": "src/Cli.php"
+        }
+    },
+    "require": {
+        "wp-cli/php-cli-tools": "^0.12.4"
+    },
     "bin": [
         "bin/brain-games"
     ]
