--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
         }
     ],
     "autoload": {
-        "psr-4": {
-            "BrainGames\\Cli\\": "src/Cli.php"
-        }
+        "files": [
+	    "src/Cli.php"
+	]
     },
     "require": {
-        "wp-cli/php-cli-tools": "^0.12.4"
+	"wp-cli/php-cli-tools": "^0.12.4"
     },
     "bin": [
         "bin/brain-games"
