--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
     ],
     "autoload": {
         "files": [
-	    "src/Cli.php"
+	    "src/Cli.php",
+        "src/Engine.php",
+        "src/Games/EvenGame.php",
+        "src/Games/CalcGame.php"
 	]
     },
     "require": {
@@ -18,7 +21,8 @@
     },
     "bin": [
         "bin/brain-games",
-        "bin/brain-even"
+        "bin/brain-even",
+        "bin/brain-calc"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.12"
