--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	    "src/Cli.php",
         "src/Engine.php",
         "src/Games/EvenGame.php",
-        "src/Games/CalcGame.php"
+        "src/Games/CalcGame.php",
+        "src/Games/GcdGame.php"
 	]
     },
     "require": {
@@ -22,7 +23,8 @@
     "bin": [
         "bin/brain-games",
         "bin/brain-even",
-        "bin/brain-calc"
+        "bin/brain-calc",
+        "bin/brain-gcd"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.12"
