--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "src/Games/EvenGame.php",
         "src/Games/CalcGame.php",
         "src/Games/GcdGame.php",
-        "src/Games/ProgressionGame.php"
+        "src/Games/ProgressionGame.php",
+        "src/Games/PrimeGame.php"
 	]
     },
     "require": {
@@ -26,7 +27,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.12"
